--- a/Desafio 2/assets/css/styles.css
+++ b/Desafio 2/assets/css/styles.css
@@ -5,6 +5,7 @@
     --bgProduct: #ebe9ea;
     --Black: #181818;
     --Gray: #474747;
+    --Blue: #00aeff;
 }
 
 * {
@@ -19,7 +20,7 @@ body {
     background: var(--White)
 }
 
-header{
+header {
     width: 100%;
     height: 120px;
 }
@@ -32,18 +33,19 @@ header{
     justify-content: center;
 }
 
-.header-discount{
-    background: var(--Black);
+.header-discount {
+    background: var(--Blue);
     color: var(--White);
+    font-weight: 500;
 }
 
-.header-brand{
+.header-brand {
     background: white;
     color: var(--Black);
 }
 
 .header-brand h3 {
-    font-size: 20px;
+    font-size: 24px;
     font-weight: 600;
 }
 
@@ -59,18 +61,49 @@ header{
     display: flex;
 }
 
-
 .text-hero {
-    width: 400px;
+    width: 460px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     color: var(--White);
-    margin-left: 100px;
+    margin-left: 160px;
 }
 
 .text-hero h2 {
     font-size: 32px;
     font-weight: 700;
     line-height: 39px;
+}
+
+.text-hero p {
+    margin-top: 20px;
+    font-size: 18px;
+    line-height: 35.31px;
+}
+
+.main-container {
+    margin: 0 auto;
+}
+
+.main-title {
+    margin-top: 60px;
+    text-align: center;
+}
+
+.main-title h2 {
+    font-size: 32px;
+    font-weight: 600;
+    color: var(--Black);
+}
+
+.main-title p {
+    color: var(--Gray);
+    font-size: 18px;
+    margin-top: 10px;
+    line-height: 60px;
+}
+
+.main-cards {
+    
 }
