--- a/Desafio 2/assets/css/styles.css
+++ b/Desafio 2/assets/css/styles.css
@@ -84,10 +84,11 @@ header {
 
 .main-container {
     margin: 0 auto;
+    max-width: 1240px;
 }
 
 .main-title {
-    margin-top: 60px;
+    margin-top: 70px;
     text-align: center;
 }
 
@@ -100,7 +101,6 @@ header {
 .main-title p {
     color: var(--Gray);
     font-size: 18px;
-    margin-top: 10px;
     line-height: 60px;
 }
 
@@ -121,8 +121,25 @@ header {
     height: 300px;
     border-radius: 10px;
     margin-bottom: 40px;
+
 }
 
 .cards img {
     width: 250px;
+}
+
+footer {
+    margin-top: 40px;
+    background-color: var(--Blue);
+    width: 100%;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--White);
+}
+
+footer p {
+    font-size: 18px;
+    font-weight: 500;
 }
