--- a/Desafio 3/assets/css/styles.css
+++ b/Desafio 3/assets/css/styles.css
@@ -94,6 +94,8 @@ header {
     width: 100%;
 }
 
+
+/* MAIN */
 .main-container {
     max-width: 1240px;
     margin: 0 auto;
@@ -141,4 +143,25 @@ header {
 
 .purple {
     background: var(--purple);
+}
+
+.cards-text {
+    padding: 24px 35px 35px 35px;
+}
+
+.cards-text h3 {
+    font-family: 'Merriweather', sans-serif;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 30px;
+    color: var(--black);
+}
+
+.cards-text p {
+    margin-top: 30px;
+    font: 'Lato', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    color: var(--gray);
 }
