--- a/Desafio 3/assets/css/styles.css
+++ b/Desafio 3/assets/css/styles.css
@@ -151,8 +151,8 @@ header {
 
 .cards-text h3 {
     font-family: 'Merriweather', sans-serif;
-    font-weight: 700;
     font-size: 24px;
+    font-weight: 700;
     line-height: 30px;
     color: var(--black);
 }
@@ -165,3 +165,60 @@ header {
     line-height: 30px;
     color: var(--gray);
 }
+
+/* FOOTER */
+footer {
+    background-color: var(--purple-light);
+    margin-top: 120px;
+}
+
+.footer-container {
+    max-width: 1240px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+}
+
+.footer-content {
+    text-align: center;
+    width: 470px;
+    padding-top: 85px;
+}
+
+.footer-tittle h2 {
+    font-family: 'Merriweather', sans-serif;;
+    font-size: 32px;
+    font-weight: 400;
+    line-height: 40px;
+}
+
+.footer-form  {
+    margin-top: 50px;
+}
+
+.footer-form form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    font-family: 'Lato', sans-serif;
+    width: 100%;
+    padding-bottom: 70px;
+}
+
+form input {
+    width: 470px;
+    height: 65px;
+    border: none;
+    border-radius: 6px;
+    padding-left: 15px;
+}
+
+form textarea {
+    height: 165px;
+    padding-left: 15px;
+    padding-top: 21px;
+    border-radius: 6px;
+    border: none;
+    resize: none;
+}
+
