--- a/Desafio 3/assets/css/styles.css
+++ b/Desafio 3/assets/css/styles.css
@@ -23,6 +23,7 @@
 
 body {
     background-color: var(--white-200);
+    height: 100%;
 }
 
 /* HEADER */
@@ -205,12 +206,14 @@ footer {
     padding-bottom: 70px;
 }
 
+/* FORM */
 form input {
     width: 470px;
     height: 65px;
     border: none;
     border-radius: 6px;
     padding-left: 15px;
+    
 }
 
 form textarea {
@@ -222,3 +225,32 @@ form textarea {
     resize: none;
 }
 
+form input:focus,
+form textarea:focus {
+    outline-color: var(--purple);
+}
+
+form input::placeholder,
+form textarea::placeholder {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    color: var(--gray);
+    font-family: 'Lato', sans-serif;
+}
+
+form button {
+    background-color: var(--purple);
+    width: 471px;
+    height: 50px;
+    box-shadow: 0px 5px 5px 0px #1717171A;
+    
+    border-radius: 5px;
+    border: none;
+    
+    color: var(--white);
+    font-size: 20px;
+    line-height: 24px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
+}
